@@ -1432,10 +1432,12 @@ public class TreeViewDemo {
         <Parameter Name="store" Type="Gtk.NodeStore" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
+        <summary>TreeView constructor</summary>
         <param name="store">a <see cref="T:Gtk.NodeStore" /></param>
         <returns>a <see cref="T:Gtk.TreeView" /></returns>
-        <remarks>To be added</remarks>
+        <remarks>Creates a <see cref="T:Gtk.TreeView" /> with <paramref name="store"/> as
+          its <see cref="P:Gtk.TreeView.Model"/>.
+	</remarks>
       </Docs>
     </Member>
   </Members>
