@@ -1,5 +1,10 @@
 2003-11-05  Mike Kestner  <mkestner@ximian.com>
 
+	* en/Gtk/TreeNode.xml : documented
+	* en/Gtk/TreeView.xml : documented NodeStore ctor.
+
+2003-11-05  Mike Kestner  <mkestner@ximian.com>
+
 	* en/Gtk/ITreeNode.xml : documented
 	* en/Gtk/TreeNodeAddedHandler.xml : documented
 	* en/Gtk/TreeNodeRemovedHandler.xml : documented
